packages/kit/test/apps/basics/src/routes/errors/page-endpoint/__error.svelte
<script>
	import { page } from '$app/stores';
</script>

<pre>{JSON.stringify(
		{
			status: $page.status,
			message: $page.error.message,
			stack: $page.error.stack
		},
		null,
		'  '
	)}</pre>
